<resources>
    <string name="app_name">ShotClock</string>
    <string name="api_key_map" translatable="false">AIzaSyCM_VpnKA8OeL80rRUE6cKRkwK6KhuIVPs</string>
    <string name="agora_app_id">b9e2deaeb87f42b194f492ce36aa4bc2</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="alert">Alert</string>
    <string name="internet_connection">Internet connection not found</string>
    <string name="default_notification_channel_id" translatable="false">ShotClock_channel</string>
    <string name="default_notification_channel_name" translatable="true">ShotClock</string>
    <string name="permissionRequired">Required camera and storage permission to access this functionality.</string>
    <string name="openSettings">Open Settings</string>
    <string name="video">Video</string>
    <string name="please_select">Please select</string>
    <string name="image">Image</string>
    <string name="report_user">Report User</string>
    <string name="select_photo">Select Photo</string>
    <string name="open_camera">Open Camera</string>
    <string name="pick_from_gallery">Pick From Gallery</string>
    <string name="shotclock">ShotClock</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to logout</string>
    <string name="sign_in_with">Sign In With</string>
    <string name="login_with_facebook">Login with facebook</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="email">Email</string>
    <string name="jamesjackon_gmail_com">jamesjackon@gmail.com</string>
    <string name="password">Password</string>
    <string name="stars">**********</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="sign_in">Sign In</string>
    <string name="not_a_member_sign_up">Not a member? <u>Sign Up</u></string>
    <string name="enter_your_mobile_number_to_login">Enter your mobile number\n to login!</string>
    <string name="mobile">Mobile</string>
    <string name="_32548566855">2548566855</string>
    <string name="submit">Submit</string>
    <string name="forgot_password_">Forgot Password</string>
    <string name="please_enter_your_email_address_to_request_a_password_reset">Please enter your email address \n to request a password reset</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_otp_sent_to_your_mobile_phone">Enter otp sent to your \n mobile phone!</string>
    <string name="resend_otp"><u>resend otp</u></string>
    <string name="complete_your_profile">Complete your profile</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="james_jackson">James Jackson</string>
    <string name="vjames_gmail_com">VJames@gmail.com</string>
    <string name="phone">Phone</string>
    <string name="_1255336588">-1255336588</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_accept_terms_conditions">I accept terms &amp; conditions</string>
    <string name="next">Next</string>
    <string name="already_a_member_sign_in">Already a member? <u>Sign in</u></string>
    <string name="date_of_birth">Date of birth</string>
    <string name="select">Select</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="qualification">Qualification</string>
    <string name="location">Location</string>
    <string name="interested_in">Interested in</string>
    <string name="add_shot_bio">Add Short Bio</string>
    <string name="add_photo">Add Photo</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="your_profile_has_been_submitted_successfully">Your profile has been submitted successfully</string>
    <string name="done">Done</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="my_requests">My Requests</string>
    <string name="notification">Notifications</string>
    <string name="messages">Messages</string>
    <string name="change_password">Change Password</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="discover">Discover!</string>
    <string name="please_select_5_matches_to_start_your_speed_date_session">Please select 5 matches to \n start your Speed Dating session!</string>
    <string name="kristen_jane">Kristen Jane</string>
    <string name="_31_miles_away">31 miles away</string>
    <string name="finding_online_dating_partner">Finding online dating partner</string>
    <string name="james_jackson_description">John James Audubon, ornithologist, artist, and naturalist who became particularly well known for his drawings..</string>
    <string name="_213485996688">+213485996688</string>
    <string name="james_gmail_com">james@gmail.com</string>
    <string name="_20_jan_1996">20 Jan 1996</string>
    <string name="male">Male</string>
    <string name="_6ft_1_inch">6ft 1 Inch</string>
    <string name="graduation">Graduation</string>
    <string name="new_york_city">New York City</string>
    <string name="womens">Womens</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="sexual_orientation">Sexual Orientation</string>
    <string name="astrological_sign">Astrological Sign</string>
    <string name="smoking">Smoking</string>
    <string name="drinking">Drinking</string>
    <string name="pets">Pets</string>
    <string name="cookie_policy">Cookie Policy</string>
    <string name="copyrights_notice">Copyrights Notice</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="safe_dating_policy">Safe Dating Policy</string>
    <string name="pisces">Pisces</string>
    <string name="gay">Gay</string>
    <string name="_5_users_for_speed_dating_session">5 users for speed dating session!</string>
    <string name="current">Current</string>
    <string name="past">Past</string>
    <string name="speed_date_session">Speed date session</string>
    <string name="cqlsys_technologies">Cqlsys Technologies</string>
    <string name="jack_jackson_has_sent_you_a_request_for_speed_dating_session">Jack Jackson has sent you a request for speed dating session!</string>
    <string name="_3_min">3 min</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="search_here">Search Here</string>
    <string name="james_author">James Author</string>
    <string name="hey_how_are_you">Hey, how are you?</string>
    <string name="_2m">2m</string>
    <string name="_2">2</string>
    <string name="type_here">Type here…</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="cookie_policy_small">Cookie policy</string>
    <string name="cookiepolicy_description">Cookie Policy If you have chosen to share it with us, we use your email address to contact you in reply to your message, or to send you our newsletter. f you have entered your email address to leave a comment on the blog, it is used to identify your comment, however it is not displayed on the website or shared with any third party.We may also use your email to help resolve issues or disputes, for example if you tell us that you cannot see any of your posts on the website, we would probably search our database using your email address to help diagnose the problem.
    CookieLawInfo.com uses best endeavour to safeguard the confidentiality of your personally identifiable information but we do not use encryption (such as SSL) or firewalls to further protect the information as it travels across the Internet. We do not believe that the personal information we collect warrants this level of security. It is important to be aware that there is no such thing as “perfect internet security”.Once posted, you cannot change or remove any comments you have submitted on our website pages and/or posts. However, if you would like to have this information removed please contact us and we will do this for you.
        You should know that because of technical constraints, all information is never completely removed from our databases. Therefore, you should not expect that all of your personally identifiable information will be completely removed from our databases in response to your requests that it be removed. We will aim to remove all publicly-facing information.</string>
    <string name="hello_shuri">Hello, Shuri</string>
    <string name="hello_james">Hello, James!</string>
    <string name="filter">Filter</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="distance">Distance</string>
    <string name="_6ft">6ft</string>
    <string name="_7_ft_above">7 Ft Above</string>
    <string name="_18_years">18 Years</string>
    <string name="_40_above">40 Above</string>
    <string name="_0_miles">0 Miles</string>
    <string name="_200_miles">200 Miles</string>
    <string name="apply">Apply</string>
    <string name="start">Start</string>
    <string name="completed">Completed</string>
    <string name="_24_feb_2020">24 Feb 2020</string>
    <string name="connect_with_your_matches">Connect with your matches!</string>
    <string name="buy">Buy</string>
    <string name="_5_99">$5.99</string>
    <string name="for_1_day">for 1 Day</string>
    <string name="connect_with_your_matches_for_1_day">connect with your \n matches for 1 day</string>
    <string name="skip">Skip</string>
    <string name="_5_00">5:00</string>
    <string name="icebreaker_questions">Icebreaker questions</string>
    <string name="q">Q.</string>
    <string name="QuestionDescription">Good icebreaker questions are also the perfect compliment?</string>
    <string name="a">A.</string>
    <string name="AnswerDescription">These check in questions are relaxed, fun and simple but will also encourage your employees to give meaningful answers. Icebreakers are great for starting everything from meetings to events</string>
    <string name="are_you_sure_you_want_to_cancel_call">Are you sure you want to cancel \n the call?</string>
    <string name="are_you_sure_you_want_to_cancel_speed_dating_session">Are you sure you want to cancel the \n speed dating session?</string>
    <string name="you_have_successfully_selected">You have successfully selected</string>
    <string name="clear">Clear</string>
    <string name="straight">Straight</string>
    <string name="smoke">Smoke</string>
    <string name="drink">Drink</string>
    <string name="education">Education</string>
    <string name="_4_1">4.1</string>
    <string name="log_out">Log Out?</string>
    <string name="no_data_found">No data found</string>
    <string name="loading_data_please_wait">Loading please wait a moment</string>
    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="gps_required">GPS is required you be turned on</string>
    <string name="settings">Settings</string>
    <string name="speed_date_sessioncaps">Speed Date Session</string>
    <string name="pending">Pending</string>
    <string name="no_chat_history_found">No chat history found</string>
</resources>