<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:title="@string/home" />

        <item
            android:id="@+id/profileFragment"
            android:title="@string/profile" />

        <item
            android:id="@+id/myRequestsFragment"
            android:title="@string/my_requests" />
        <item
            android:id="@+id/notificationFragment"
            android:title="@string/notification" />

        <item
            android:id="@+id/messageFragment"
            android:title="@string/messages" />

        <item
            android:id="@+id/changePasswordFragment"
            android:title="@string/change_password" />

        <item
            android:id="@+id/cookiePolicyFragment"
            android:title="@string/cookie_policy" />

        <item
            android:id="@+id/copyrightPolicyFragment"
            android:title="@string/copyrights_notice" />

        <item
            android:id="@+id/privacyPolicyFragment"
            android:title="@string/privacy_policy" />

        <item android:id="@+id/safedatingpolicy_fragment"
            android:title="@string/safe_dating_policy"/>

        <item
            android:id="@+id/termsconditions_fragment"
            android:title="@string/terms_conditions" />

        <item
            android:id="@+id/aboutus_fragment"
            android:title="@string/about_us" />

        <item
            android:id="@+id/logout"
            android:title="@string/logout" />

    </group>
</menu>