<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_app_bg"
    tools:context=".fragments.LoginFragment">

    <ImageView
        android:id="@+id/ivAppLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/ic_app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvWlcBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:text="@string/welcome_back"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"
        android:fontFamily="@font/proxima_semibold"
        app:layout_constraintEnd_toEndOf="@+id/ivAppLogo"
        app:layout_constraintStart_toStartOf="@+id/ivAppLogo"
        app:layout_constraintTop_toBottomOf="@+id/ivAppLogo" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/email"
        android:fontFamily="@font/proxima_semibold"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWlcBack" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/proxima_regular"
        android:background="@drawable/bg_whiteline_round_corners"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="@dimen/_10sdp"
        android:hint="@string/jamesjackon_gmail_com"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintTop_toBottomOf="@id/tvEmail" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/password"
        android:fontFamily="@font/proxima_semibold"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/bg_whiteline_round_corners"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="@dimen/_10sdp"
        android:hint="@string/stars"
        android:inputType="textPassword"
        android:maxLines="1"
        android:fontFamily="@font/proxima_regular"
        android:imeOptions="actionDone"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintTop_toBottomOf="@id/tvPassword" />

    <CheckBox
        android:id="@+id/cbRememberMe"
        android:layout_width="@dimen/_170sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:button="@drawable/remeberme_checkbox"
        android:paddingStart="@dimen/_5sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:text="@string/remember_me"
        android:fontFamily="@font/proxima_regular"
        android:textColor="@color/white"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintStart_toStartOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toBottomOf="@+id/cbRememberMe"
        app:layout_constraintEnd_toEndOf="@id/etPassword"
        app:layout_constraintTop_toTopOf="@id/cbRememberMe" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/bg_white_round_corners"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:fontFamily="@font/proxima_regular"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:text="@string/not_a_member_sign_up"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/proxima_semibold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>