<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/img_app_bg"
    tools:context=".fragments.ChangePasswordFragment">

    <include layout="@layout/app_toolbar"
        android:id="@+id/tb"/>

    <TextView
        android:id="@+id/tvChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:gravity="center"
        android:textSize="@dimen/_16ssp"
        android:layout_marginTop="@dimen/_20sdp"
        android:textColor="@color/white"
        android:fontFamily="@font/proxima_semibold"
        app:layout_constraintTop_toBottomOf="@+id/tb"/>

    <TextView
        android:id="@+id/tvOldPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:fontFamily="@font/proxima_regular"
        android:text="@string/old_password"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/_22sdp"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvChangePassword" />

    <EditText
        android:id="@+id/etOldPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:background="@drawable/bg_whiteline_round_corners"
        android:drawablePadding="@dimen/_10sdp"
        android:hint="@string/enter_old_password"
        android:maxLines="1"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_lock"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintTop_toBottomOf="@id/tvOldPassword" />

    <TextView
        android:id="@+id/tvNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/proxima_regular"
        android:text="@string/new_password"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="@+id/tvOldPassword"
        app:layout_constraintTop_toBottomOf="@id/etOldPassword" />

    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35sdp"
        android:background="@drawable/bg_whiteline_round_corners"
        android:drawablePadding="@dimen/_10sdp"
        android:hint="@string/enter_new_password"
        android:maxLines="1"
        android:layout_marginTop="@dimen/_10sdp"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_lock"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="@id/etOldPassword"
        app:layout_constraintStart_toStartOf="@id/etOldPassword"
        app:layout_constraintTop_toBottomOf="@id/tvNewPassword" />

    <TextView
        android:id="@+id/tvConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/proxima_regular"
        android:text="@string/confirm_password"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="@+id/tvNewPassword"
        app:layout_constraintTop_toBottomOf="@id/etNewPassword" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35sdp"
        android:background="@drawable/bg_whiteline_round_corners"
        android:drawablePadding="@dimen/_10sdp"
        android:hint="@string/enter_confirm_password"
        android:maxLines="1"
        android:layout_marginTop="@dimen/_10sdp"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_lock"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="@id/etNewPassword"
        app:layout_constraintStart_toStartOf="@id/etNewPassword"
        app:layout_constraintTop_toBottomOf="@id/tvConfirmPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btUpdate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_20sdp"
        android:background="@drawable/bg_white_round_corners"
        android:fontFamily="@font/proxima_semibold"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/etConfirmPassword"
        app:layout_constraintStart_toStartOf="@id/etConfirmPassword"
        app:layout_constraintTop_toBottomOf="@id/etConfirmPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>