<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_app_bg"
    tools:context=".fragments.ForgotPasswordFragment">

    <ImageView
        android:id="@+id/ivBckForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:src="@drawable/ic_back"
        android:padding="@dimen/_5sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPleaseEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/proxima_regular"
        android:text="@string/please_enter_your_email_address_to_request_a_password_reset"
        android:textColor="@color/white"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintStart_toStartOf="@id/tvForgotPassword"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:fontFamily="@font/proxima_semibold"
        android:text="@string/forgot_password_"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBckForgot" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:fontFamily="@font/proxima_regular"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="@id/tvPleaseEnter"
        app:layout_constraintTop_toBottomOf="@id/tvPleaseEnter" />

    <EditText
        android:id="@+id/etEmailForgot"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/bg_whiteline_round_corners"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="@dimen/_10sdp"
        android:fontFamily="@font/proxima_regular"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:hint="@string/enter_email"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintTop_toBottomOf="@id/tvEmail" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btSubmitForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/bg_white_round_corners"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:fontFamily="@font/proxima_regular"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:backgroundTint="@null"
        android:layout_marginBottom="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>