<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_app_bg"
    tools:context=".fragments.SubscriptionFragment">

    <TextView
        android:id="@+id/tvConnectMatches"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:fontFamily="@font/proxima_semibold"
        android:gravity="center"
        android:text="@string/connect_with_your_matches"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_app_color"
        app:layout_constraintTop_toBottomOf="@id/tvConnectMatches">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/proxima_bold"
            android:text="@string/_5_99"
            android:textSize="@dimen/_18ssp" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btBuy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:background="@drawable/bg_white_round_corners"
        android:fontFamily="@font/proxima_regular"
        android:text="@string/buy"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>